Fixed element spacing in the form

--- a/app/assets/stylesheets/components/form.scss
+++ b/app/assets/stylesheets/components/form.scss
@@ -6,7 +6,7 @@
   gap: var(--space-xs);
 
   &__group {
-    flex: 1;
+    //flex: 1;
   }
 
   &__input {
