--- a/app/assets/stylesheets/layouts/_container.scss
+++ b/app/assets/stylesheets/layouts/_container.scss
@@ -2,10 +2,13 @@
 
 .container {
   width: 100%;
+  height: 100vh;
   padding-right: var(--space-xs);
   padding-left: var(--space-xs);
   margin-left: auto;
   margin-right: auto;
+  display: flex;
+  flex-direction: column;
 
   @include media(tabletAndUp) {
     padding-right: var(--space-m);
